tests/core/data/csl/InterfaceTypeTests/InvalidDeclarations/inexistentReturnType.csl
// Method declaration has a inexistent returning type 
interface inexistentReturnType
{
	IDontExist Foo(in string fooMe);

};


